# w-calc

./: .cvsignore  .gdb_history  .gitignore  AUTHORS  AboutBoxController.h  AboutBoxController.m  COPYRIGHT  ChangeLog  ConversionList.h  ConversionList.m  ErrorController.h  ErrorController.m  HistoryList.h  HistoryList.m  Info.plist  InspectorController.h  InspectorController.m  Makefile  Makefile.am  Makefile.in  MyTextField.h  MyTextField.m  NEWS  NewWcalc.icns  OldVariableList.h  OldVariableList.m  PersVarList.m  PrefsController.h  PrefsController.m  README  README.txt  ReadMe.rtf  TheW.icns  VariableList.h  VariableList.m  Wcalc-nonFHS.pmproj  Wcalc.pmproj  Wcalc.pmsp  WcalcController.h  WcalcController.m  (+58 more)
English.lproj/: .cvsignore  InfoPlist.strings  Makefile.am
English.lproj/MainMenu.nib/: classes.nib  info.nib  keyedobjects.nib  objects.nib
Wcalc.pbproj/: kyle.pbxuser  project.pbxproj
Wcalc.pmdoc/: 01wcalc-contents.xml  01wcalc.xml  index.xml
Wcalc.xcodeproj/: kyle.mode1  kyle.pbxuser  project.pbxproj
config/: .gitignore  editline.m4  readline.m4
src/: .gitignore  AllUnitTests.c  Makefile.am
src/cli/: display.c  display.h  help.c  help.h  main.c
src/common/: Makefile.am  Makefile.inc  add_commas.c  add_commas.test.c  calculator.c  conf.c  conversion.c  evalvar.c  evalvar.test.c  explain.c  extract_vars.c  extract_vars.test.c  files.c  help.c  historyManager.c  iscmd.c  iscmd.test.c  isconst.c  isfunc.c  isfunc.test.c  list.c  number.c  number_formatting.c  parser.y  result_printer.c  result_printer.test.c  scanner.l  string_manip.c  string_manip.test.c  variables.c
src/common/includes/: Makefile.am  Makefile.inc  add_commas.h  calculator.h  conf.h  conversion.h  definitions.h  evalvar.h  explain.h  extract_vars.h  files.h  help.h  historyManager.h  iscmd.h  isconst.h  isfunc.h  list.h  number.h  number_formatting.h  output.h  result_printer.h  string_manip.h  uint32_max.h  variables.h
src/gui/: AboutBoxController.m  ConversionList.m  ErrorController.m  HistoryList.m  InspectorController.m  Makefile.am  Makefile.inc  MyTextField.m  PersVarList.m  VariableList.m  WcalcController.m  WcalcService.m  main.m  simpleCalc.c  theDelegate.m
src/gui/includes/: AboutBoxController.h  OldVariableList.h  PersVarList.h  VariableList.h  WcalcController.h  WcalcService.h
test/: Makefile.am  active_variable.test  basic_float.test  basic_ints.test  basic_math.test  basic_vars.test  checktest.sh  compound_math.test  conversion.test  engineering.test  err.assert.test  err.assign.test  err.conv_category1.test  err.conv_category2.test  err.question.test  err.recursion1.test  err.recursion2.test  err.recursion3.test  err.recursion4.test  factorial.test  formatting.test  implicit_mult.test  precision_guard.test  test.simple  vars.test  website_math.test
website/: contact.html  download.html  index.html  screenshots.html  wcalc.html
