# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.50)
AC_INIT(wcalc, 2.2, kyle-wcalc@memoryhole.net)
AM_INIT_AUTOMAKE(wcalc, 2.2)
AC_CONFIG_SRCDIR([WcalcController.h])
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_YACC
AC_PROG_CC
AM_PROG_LEX
AC_PROG_INSTALL

# Checks for libraries.
# FIXME: Replace `main' with a function in `-ll':
AC_CHECK_LIB([l], [main])
AC_CHECK_LIB([m], [acos])
#AC_CHECK_LIB([termcap], [clear])
# FIXME: Replace `main' with a function in `-lreadline':
AC_ARG_WITH(readline,[  --without-readline      do not try to find and use the readline library],nc_cv_readline=$withval,nc_cv_readline=yes)
if test "$nc_cv_readline" = yes ; then
	VL_LIB_READLINE
fi

AC_CHECK_LIB(gmp, __gmpz_init, ,
       [AC_CHECK_LIB(gmp, mpz_init, ,
         [AC_CHECK_LIB(gmp2, mpz_init)])])
AC_CHECK_LIB(mpfr, mpfr_free_str, , [AC_MSG_ERROR(
[Need MPFR 2.1.x or better. see http://www.mpfr.org])])

# what version of mpfr
AC_CHECK_FUNC(__gmpfr_set_uj, [AC_DEFINE(HAVE_MPFR_21,1,"MPFR version 2.1 or better")])
AC_CHECK_FUNC(mpfr_sec, [AC_DEFINE(HAVE_MPFR_22,1,"MPFR version 2.2 or better")])

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_HEADER_TIME
#AC_HEADER_STAT
AC_CHECK_HEADERS([fcntl.h float.h inttypes.h limits.h stddef.h stdint.h stdlib.h string.h sys/time.h unistd.h stdio.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
#AC_FUNC_ALLOCA
AC_FUNC_MALLOC
AC_FUNC_REALLOC
#AC_FUNC_STAT
#AC_FUNC_STRTOD
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([gettimeofday memset modf pow stpcpy strchr strdup strerror strrchr strtoul])

if test "`(uname) 2>/dev/null`" = SunOS \
	&& uname -r | grep '^5' >/dev/null; then
	AC_CHECK_LIB(sunmath, isinf, ac_sunmath=-lsunmath, ac_sunmath="")
	AC_CHECK_FUNCS(isinf)
	AC_CHECK_HEADERS(ieeefp.h)
	LDFLAGS="$LDFLAGS $ac_sunmath"
fi

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

