EXTRA_DIST = includes/WcalcController.h WcalcController.m \
			 includes/AboutBoxController.h AboutBoxController.m \
			 includes/ConversionList.h ConversionList.m \
			 includes/ErrorController.h ErrorController.m \
			 includes/HistoryList.h HistoryList.m \
			 includes/InspectorController.h InspectorController.m \
			 includes/MyTextField.h MyTextField.m \
			 includes/OldVariableList.h OldVariableList.m \
			 includes/PersVarList.h PersVarList.m \
			 includes/VariableList.h VariableList.m \
			 includes/WcalcService.h WcalcService.m \
			 includes/theDelegate.h theDelegate.m \
			 main.m \
			 includes/simpleCalc.h simpleCalc.c
