noinst_HEADERS = \
		 add_commas.h \
		 calculator.h \
		 conversion.h \
		 definitions.h \
		 evalvar.h \
		 explain.h \
		 extract_vars.h \
		 files.h \
		 help.h \
		 historyManager.h \
		 iscmd.h \
		 isconst.h \
		 isfunc.h \
		 list.h \
		 number_formatting.h \
		 number.h \
		 string_manip.h \
		 uint32_max.h \
		 variables.h
